# echonote

./: .editorconfig  .gitattributes  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: audit.toml  config.toml
.cursor/: README.md
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: architect-review.agent.md  code-reviewer.agent.md  frontend-developer.agent.md  performance-engineer.agent.md  rust-pro.agent.md  security-auditor.agent.md  sql-pro.agent.md  test-automator.agent.md  typescript-pro.agent.md
.github/instructions/: frontend-design.instructions.md  terminal-strategy.instructions.md
.github/workflows/: bench.yml  ci.yml  cla.yml  release.yml
crates/echo-app/: Cargo.toml
crates/echo-app/src/: lib.rs  punct.rs  sanitize.rs
crates/echo-app/src/services/: event_bus.rs  meeting_recorder.rs  mod.rs  session_manager.rs  wer.rs
crates/echo-app/src/use_cases/: chat_with_transcript.rs  export.rs  generate_summary.rs  mod.rs  rename_speaker.rs  start_recording.rs  stop_recording.rs
crates/echo-app/src/use_cases/streaming/: mod.rs  sample_pool.rs  tests.rs
crates/echo-app/tests/: streaming_integration.rs
crates/echo-asr/: Cargo.toml
crates/echo-asr/src/: lib.rs  whisper_cpp.rs
crates/echo-asr/tests/: whisper_smoke.rs
crates/echo-audio/: Cargo.toml
crates/echo-audio/src/: buffer.rs  lib.rs  output_device.rs
crates/echo-audio/src/capture/: cpal_microphone.rs  linux.rs  macos.rs  mixed.rs  mod.rs  routing.rs  windows.rs
crates/echo-audio/src/preprocess/: denoise.rs  mod.rs  resample.rs  silero_vad.rs  vad.rs
crates/echo-audio/src/sink/: mod.rs  wav.rs
crates/echo-audio/tests/: wav_roundtrip.rs
crates/echo-diarize/: Cargo.toml
crates/echo-diarize/examples/: embed_cosine_matrix.rs
crates/echo-diarize/src/: cam_plus_plus.rs  cluster.rs  embedding.rs  eres2net.rs  lib.rs  offline_refine.rs  online_diarizer.rs  pyannote_segmenter.rs
crates/echo-domain/: Cargo.toml
crates/echo-domain/src/: errors.rs  lib.rs
crates/echo-domain/src/entities/: custom_template.rs  meeting.rs  mod.rs  note.rs  segment.rs  speaker.rs  streaming.rs  summary.rs
crates/echo-domain/src/ports/: audio.rs  chat.rs  diarizer.rs  llm.rs  mod.rs  punctuator.rs  resampler.rs  segmenter.rs  storage.rs  transcriber.rs  vad.rs
crates/echo-llm/: Cargo.toml
crates/echo-llm/src/: backend.rs  lib.rs  llama_cpp.rs  llama_cpp_chat.rs  shared.rs
crates/echo-llm/tests/: llama_smoke.rs
crates/echo-mcp/: Cargo.toml
crates/echo-mcp/src/: main.rs
crates/echo-proto/: Cargo.toml
crates/echo-proto/src/: main.rs
crates/echo-storage/: Cargo.toml
crates/echo-storage/migrations/: 0001_initial.sql  0002_speaker_slot.sql  0003_fts5.sql  0004_summaries.sql  0005_notes.sql
crates/echo-storage/src/: lib.rs  sqlite.rs
crates/echo-telemetry/: Cargo.toml
crates/echo-telemetry/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT_PLAN.md  OPTIMIZATION-PLAN.md  RELEASE-PLAN.md  SPRINT-0-RETRO.md  SPRINT-1-STATUS.md  mockup-home.html  mockup-meeting.html  mockup-recording.html
docs/adr/: 0001-tauri-over-electron.md  0002-rust-plus-react-stack.md  0003-whisper-cpp-over-faster-whisper.md  0007-diarization-via-onnx-eres2net.md  0008-silero-vad-tract-onnx-with-pre-simplification.md  0009-whisper-cpp-model-tiers-over-parakeet.md  README.md
docs/benchmarks/: PHASE-0.md
fixtures/: README.md
fixtures/transcripts/: 01_short_meeting.txt  02_technical_terms.txt  03_numbers_and_dates.txt  04_questions.txt  05_long_passage.txt
scripts/: bootstrap.sh  build-fixtures.sh  build-mcp-sidecar.sh  build-spanish-asr.sh  download-models.sh  simplify-silero-vad.py
src/: App.tsx  README.md  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ipc_error.rs  lib.rs  main.rs
src-tauri/src/commands/: export.rs  hardware.rs  llm.rs  mcp.rs  meetings.rs  mod.rs  models.rs  recommendation.rs  streaming.rs  templates.rs
src/components/: Button.tsx  ContextMenu.tsx  CopyButton.tsx  ErrorBoundary.tsx  Logo.tsx  McpClientLogo.tsx  Modal.tsx  ModelProviderLogo.tsx  ResizableHandle.tsx  ResizableHandleVertical.tsx  SpeakerChip.tsx  Stat.tsx  StatsBar.tsx  Toaster.tsx
src/features/live/: HealthProbe.tsx  LivePane.tsx  NoteInput.tsx  NoteList.tsx  TranscriptRow.tsx
src/features/meetings/: ChatPanel.tsx  ExportButton.tsx  MeetingDetail.tsx  NotesPanel.tsx  SegmentRow.tsx  SpeakerEditor.tsx  SpeakersPanel.tsx  SummaryPanel.tsx
src/features/onboarding/: OnboardingFlow.tsx
src/features/onboarding/steps/: CompletionStep.tsx  HardwareStep.tsx  ModelsStep.tsx  PermissionsStep.tsx  PrivacyStep.tsx  TestRecordingStep.tsx  WelcomeStep.tsx
src/features/settings/: LanguageSwitcher.tsx  McpInstaller.tsx  ModelManager.tsx  TemplateManager.tsx  ThemeSwitcher.tsx
src/features/sidebar/: MeetingsList.tsx  MeetingsSearchBox.tsx  SearchResults.tsx  Sidebar.tsx
src/hooks/: useAutoUpdate.ts  useChat.ts  useGlobalShortcuts.ts  useHardwareRecommendation.ts  useHealthProbe.ts  useMeetingDetail.ts  useMeetingSummary.ts  useModelManager.ts  useOnboardingState.ts  useRecordingSession.ts  useTheme.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json
src/ipc/: bindings.ts  client.ts  isTauri.ts  useIpcAction.test.ts  useIpcAction.ts
src/lib/: format.ts  ipc.ts  speakers.test.ts  speakers.ts  useDebouncedValue.ts
src/state/: recording.test.ts  recording.ts  useMeetingsStore.tsx
src/types/: chat.ts  custom-template.ts  hardware.ts  health.ts  ipc-error.ts  meeting.ts  models.ts  speaker.ts  streaming.ts  summary.ts  view.ts
