# -----------------------------------------------------------------------------
# EchoNote — Cargo workspace root
# -----------------------------------------------------------------------------
# This file defines the Rust workspace for the EchoNote desktop app.
# See docs/ARCHITECTURE.md §5.1 for the rationale behind the crate split.
# -----------------------------------------------------------------------------

[workspace]
resolver = "2"
members = [
  "crates/echo-domain",
  "crates/echo-app",
  "crates/echo-audio",
  "crates/echo-asr",
  "crates/echo-diarize",
  "crates/echo-llm",
  "crates/echo-storage",
  "crates/echo-telemetry",
  "crates/echo-proto",
  "src-tauri",
]

# -----------------------------------------------------------------------------
# Shared package metadata inherited by member crates via `package.xxx.workspace = true`
# -----------------------------------------------------------------------------
[workspace.package]
version = "0.3.8"
edition = "2021"
rust-version = "1.88"
authors = ["Luis MC <luismctechdev@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/luismctech/echonote"
homepage = "https://github.com/luismctech/echonote"
readme = "README.md"
keywords = ["transcription", "whisper", "llm", "local-first", "privacy"]
categories = ["multimedia", "multimedia::audio"]

# -----------------------------------------------------------------------------
# Workspace-wide dependency versions.
# Member crates opt in with `dep = { workspace = true }`. This guarantees a
# single resolved version across the tree and makes bumps a single-file change.
# -----------------------------------------------------------------------------
[workspace.dependencies]
# Runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "signal"] }
futures = "0.3"
async-trait = "0.1"

# Error handling & logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# IDs & time
uuid = { version = "1.11", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI (echo-proto)
clap = { version = "4.5", features = ["derive", "env"] }

# Audio
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
# macOS-only system audio capture (ScreenCaptureKit). Pulled in conditionally
# by echo-audio via [target.'cfg(target_os = "macos")'.dependencies].
screencapturekit = "1.5"

# ML inference
# Pure-Rust ONNX inference. Used by echo-audio for the Silero VAD v5
# adapter (Sprint 1 day 4). Avoids the FFI / shared-lib dance of
# onnxruntime — fine for tiny models. We may swap to `ort` for larger
# diarization / TTS models if performance becomes an issue.
tract-onnx = { version = "0.22", default-features = false }

# Speaker-embedding feature extraction. Pure-Rust port of kaldi-native-fbank
# providing 80-mel filterbank features compatible with the 3D-Speaker
# preprocessing. Used by echo-diarize for the ERes2Net adapter
# (Sprint 1 day 6).
mel_spec = "0.3"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# ASR
# whisper-rs builds whisper.cpp from source via cmake. The Metal feature
# is enabled per-crate on macOS only (see crates/echo-asr/Cargo.toml).
whisper-rs = { version = "0.16", default-features = false, features = ["tracing_backend"] }

# LLM
# llama-cpp-2 provides safe bindings to llama.cpp. We disable the default
# feature set to opt out of `openmp` (which would force libomp at link
# time on macOS) and `android-shared-stdcxx` (Android-only). Metal is
# pulled in automatically by `llama-cpp-sys-2` when building on macOS
# arm64, so no extra feature flag is required for Apple Silicon. CUDA /
# Vulkan stay opt-in for downstream packagers.
llama-cpp-2 = { version = "0.1", default-features = false }
encoding_rs = "0.8"

# HTTP (model downloads)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Type-safe IPC bindings (tauri-specta)
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "time", "function"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# Testing
pretty_assertions = "1.4"
tempfile = "3.10"

# Internal crates — referenced by path so members can depend on siblings
echo-domain = { path = "crates/echo-domain" }
echo-app = { path = "crates/echo-app" }
echo-audio = { path = "crates/echo-audio" }
echo-asr = { path = "crates/echo-asr" }
echo-diarize = { path = "crates/echo-diarize" }
echo-llm = { path = "crates/echo-llm" }
echo-storage = { path = "crates/echo-storage" }
echo-telemetry = { path = "crates/echo-telemetry" }

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
opt-level = 0
# "line-tables-only" gives useful backtraces at ~1/5 the disk cost of
# full DWARF. Switch to `true` only when you need to inspect locals in
# a debugger.
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Third-party crates: strip debug info entirely — you never step into
# tract-onnx, objc2, tauri internals, etc. This alone saves ~2 GB.
[profile.dev.package."*"]
opt-level = 0
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Profile used by CI for faster builds with some optimization.
[profile.ci]
inherits = "dev"
debug = 1
incremental = false
