[package]
name = "echo-app"
description = "Application layer: use cases that orchestrate domain ports. Framework-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
echo-domain.workspace = true

tokio.workspace = true
async-trait.workspace = true
# Used by `chat_with_transcript` to bridge the `ChatAssistant` token stream
# into the use-case-level `AskAboutMeetingEvent` stream. Trait surface only
# (`Stream`, `BoxStream`); no executor pulled in here.
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
# Tests in this crate use hand-rolled fakes (see meeting_recorder.rs,
# rename_speaker.rs) instead of mockall — explicit Stores are easier to
# reason about for a 5-method trait. Reintroduce mockall when a use
# case grows enough internal helpers that hand-rolling becomes painful.
pretty_assertions.workspace = true
