[package]
name = "echo-domain"
description = "Pure domain layer: entities, value objects and port traits. No side effects, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
