[package]
name = "echo-domain"
description = "Pure domain layer: entities, value objects and port traits. No side effects, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
specta.workspace = true
# Used by `ports::chat` for the `BoxStream` return type. We only depend on the
# pure trait surface (`Stream`, `Pin<Box<...>>`) — no executor, no I/O —
# which keeps the domain layer side-effect-free per the lib.rs contract.
futures.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
