[package]
name = "echo-llm"
description = "Local LLM adapter around llama.cpp for summaries and chat-with-transcript."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
echo-domain.workspace = true

tokio.workspace = true
async-trait.workspace = true
# Used by `LlamaCppChat` to expose the mpsc receiver as a `BoxStream`
# (`futures::stream::unfold`). Trait surface only — no executor pulled
# in (tokio remains the only async runtime).
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# llama.cpp bindings — see workspace Cargo.toml for the rationale behind
# the disabled default features. Metal is pulled in automatically on
# macOS arm64 by llama-cpp-sys-2; no extra feature flag is needed.
llama-cpp-2 = { workspace = true }
# Token-piece decoding uses the same UTF-8 incremental decoder as the
# upstream llama-cpp-rs example so multi-byte sequences split across
# tokens are stitched back together correctly.
encoding_rs = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
